--- a/src/components/benefits/tabs/styles.module.css
+++ b/src/components/benefits/tabs/styles.module.css
@@ -1,6 +1,6 @@
 .tabs {
   @apply flex justify-center mt-12;
-  background: url('/images/patterns/right.png');
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: right bottom;
 }
